fix z-index bug for buttons in slides

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -81,6 +81,7 @@ h2 {
 
 .hero-slider {
   background-image: linear-gradient(0deg, #8CD2D6 0%, #607AB9 100%);
+  z-index: 50;
 
   .slick-slide {
     background-size: cover;
@@ -125,6 +126,10 @@ h2 {
         font-weight: 600;
         text-align: center;
         text-transform: uppercase;
+
+        &:hover {
+          text-decoration: none;
+        }
       }
     }
   }
@@ -136,6 +141,10 @@ h2 {
   right: 0;
   left: 0;
   margin-top: 30px;
+
+  .hero-slider-nav {
+    z-index: 100;
+  }
 
   .slick-list {
     padding-right: 16px;
